Fix profile results ui flickering

--- a/frontend/src/components/home/header/home-header.scss
+++ b/frontend/src/components/home/header/home-header.scss
@@ -3,6 +3,7 @@
 .home {
   .header {
     width: 100%;
+    z-index: 2;
     overflow: hidden;
     display: grid;
     align-items: center;
